--- a/CopyTradingIq/CopyTradingIq.csproj
+++ b/CopyTradingIq/CopyTradingIq.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Biblioteca\Cadena.cs" />
     <Compile Include="Biblioteca\Fichero.cs" />
     <Compile Include="Biblioteca\IqOptionWs.cs" />
+    <Compile Include="Biblioteca\Bitacora.cs" />
     <Compile Include="Biblioteca\Notificacion.cs" />
     <Compile Include="Biblioteca\Resultado.cs" />
     <Compile Include="Form1.cs">
@@ -162,6 +163,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
